Remove domains from Reactions-based applications projects