@@ -1,12 +1,11 @@
 package tools.vitruv.applications.pcmjava.ejbtransformations;
 
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
 import tools.vitruv.applications.pcmjava.ejbtransformations.java2pcm.EjbJava2PcmChangePropagationSpecification;
 import tools.vitruv.applications.pcmjava.ejbtransformations.pcm2java.Pcm2EjbJavaChangePropagationSpecification;
-import tools.vitruv.domains.java.JavaDomainProvider;
-import tools.vitruv.domains.pcm.PcmDomainProvider;
 import tools.vitruv.framework.applications.VitruvApplication;
 import tools.vitruv.framework.domains.VitruvDomain;
 import tools.vitruv.change.propagation.ChangePropagationSpecification;
@@ -28,6 +27,6 @@ public class PcmJavaEjbApplication implements VitruvApplication {
 
 	@Override
 	public Set<VitruvDomain> getVitruvDomains() {
-		return Set.of(new PcmDomainProvider().getDomain(), new JavaDomainProvider().getDomain());
+		return Collections.emptySet();
 	}
 }
