@@ -1,12 +1,11 @@
 package tools.vitruv.applications.pcmjava.pojotransformations;
 
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
 import tools.vitruv.applications.pcmjava.pojotransformations.java2pcm.Java2PcmChangePropagationSpecification;
 import tools.vitruv.applications.pcmjava.pojotransformations.pcm2java.Pcm2JavaChangePropagationSpecification;
-import tools.vitruv.domains.java.JavaDomainProvider;
-import tools.vitruv.domains.pcm.PcmDomainProvider;
 import tools.vitruv.framework.applications.VitruvApplication;
 import tools.vitruv.framework.domains.VitruvDomain;
 import tools.vitruv.change.propagation.ChangePropagationSpecification;
@@ -28,7 +27,7 @@ public class PcmJavaPojoApplication implements VitruvApplication {
 
 	@Override
 	public Set<VitruvDomain> getVitruvDomains() {
-		return Set.of(new PcmDomainProvider().getDomain(), new JavaDomainProvider().getDomain());
+		return Collections.emptySet();
 	}
 
 }
