@@ -1,10 +1,9 @@
 package tools.vitruv.applications.pcmumlcomponents;
 
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
-import tools.vitruv.domains.pcm.PcmDomainProvider;
-import tools.vitruv.domains.uml.UmlDomainProvider;
 import tools.vitruv.framework.applications.VitruvApplication;
 import tools.vitruv.framework.domains.VitruvDomain;
 import tools.vitruv.change.propagation.ChangePropagationSpecification;
@@ -26,7 +25,7 @@ public class PcmUmlComponentsApplication implements VitruvApplication {
 
 	@Override
 	public Set<VitruvDomain> getVitruvDomains() {
-		return Set.of(new PcmDomainProvider().getDomain(), new UmlDomainProvider().getDomain());
+		return Collections.emptySet();
 	}
 
 }
